[GR-57817] Fixed review comments.